--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,20 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.71.1",
     "react-router": "^7.0.0",
     "tailwind-merge": "^2.5.0",
-    "zustand": "^5.0.0"
+    "zod": "^4.3.6",
+    "zustand": "^5.0.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
