--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@types/libsodium-wrappers": "^0.7.14",
     "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "libsodium-wrappers": "^0.8.2",
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.0",
     "react": "^19.0.0",
