--- a/backend/package.json
+++ b/backend/package.json
@@ -8,19 +8,20 @@
     "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
-    "fastify": "^5.2.0",
+    "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
-    "@fastify/cookie": "^10.0.1",
-    "pg": "^8.13.1",
+    "@fastify/websocket": "^11.2.0",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.0",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.5",
     "@types/bcrypt": "^5.0.2",
+    "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
-    "typescript": "^5.7.3",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3"
   }
 }
