feat(03-01): add coturn TURN/STUN server to Docker Compose
- Add coturn/coturn:4.6.3 service with REST API auth secret
- Configure ports 3478 (UDP+TCP), 5349 (UDP+TCP), 49152-49200/udp for media relay
- Add command line args for --use-auth-secret, --realm, --no-tls
- Add healthcheck using nc -z localhost 3478
- Add TURN_SECRET, TURN_REALM, TURN_HOST to .env.example

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,12 @@ JWT_REFRESH_EXPIRY=7d
 # For production with nginx proxy, use /api
 # For development with separate frontend/backend, use http://localhost:3000
 VITE_API_URL=/api
+
+# TURN Server Configuration
+# Used for NAT traversal in WebRTC voice/video calls
+# Generate secret with: openssl rand -hex 32
+TURN_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL_RAND_HEX_32
+# TURN_REALM should match your domain in production (e.g., example.com)
+TURN_REALM=localhost
+# TURN_HOST should be your public IP or domain in production
+TURN_HOST=localhost
