--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=7d
 
 # Frontend Configuration
-# For production with nginx proxy, use empty (endpoints already have /api prefix)
+# For production with nginx proxy, leave empty (endpoints already include /api)
 # For development with separate frontend/backend, use http://localhost:3000
 VITE_API_URL=
