--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,13 @@
     "next-themes": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.71.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.0.0",
+    "react-simple-pull-to-refresh": "^1.3.4",
+    "react-swipeable": "^7.0.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.0",
