--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@mediapipe/selfie_segmentation": "^0.1.1675465747",
     "@types/libsodium-wrappers": "^0.7.14",
+    "@types/react-window": "^1.8.8",
     "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.17.2",
     "libsodium-wrappers-sumo": "^0.8.2",
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.0",
@@ -26,8 +29,10 @@
     "react-router": "^7.0.0",
     "react-simple-pull-to-refresh": "^1.3.4",
     "react-swipeable": "^7.0.2",
+    "react-window": "^2.2.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.0",
+    "yet-another-react-lightbox": "^3.28.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.0",
     "zxcvbn": "^4.4.2"
