--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "@fastify/cookie": "^10.0.1",
     "@fastify/cors": "^10.0.1",
     "@fastify/jwt": "^9.0.1",
+    "@fastify/multipart": "^9.4.0",
     "@fastify/websocket": "^11.2.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
