feat(06-02): configure avatar storage volume mount
- Add volume mapping for avatar storage in docker-compose.yml
- Mount ./data/avatars to /app/data/avatars in backend container
- Enables persistent avatar image storage across container restarts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
         restart: true
     ports:
       - "3000:3000"
+    volumes:
+      - ./data/avatars:/app/data/avatars
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:3000/health"]
       interval: 10s
