--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.5.6",
     "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.71.1",
     "react-loading-skeleton": "^3.5.0",
