security: harden auth and ws transport

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,9 @@ DB_PASSWORD=CHANGE_ME_IN_PRODUCTION
 DB_NAME=chatapp
 
 # JWT Configuration
-# IMPORTANT: Change JWT_SECRET to a long random string in production
+# IMPORTANT: Change JWT_SECRET to a long random string in production (>= 32 chars)
 # Generate with: openssl rand -base64 64
-JWT_SECRET=CHANGE_ME_USE_LONG_RANDOM_STRING
+JWT_SECRET=CHANGE_ME_USE_LONG_RANDOM_STRING_AT_LEAST_32_CHARS
 JWT_ACCESS_EXPIRY=15m
 JWT_REFRESH_EXPIRY=7d
 
@@ -14,6 +14,10 @@ JWT_REFRESH_EXPIRY=7d
 # For production with nginx proxy, use /api
 # For development with separate frontend/backend, use http://localhost:3000
 VITE_API_URL=/api
+
+# CORS Configuration
+# Comma-separated allowlist of origins in production
+CORS_ORIGIN=http://localhost,http://127.0.0.1
 
 # TURN Server Configuration
 # Used for NAT traversal in WebRTC voice/video calls
