--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       JWT_ACCESS_EXPIRY: ${JWT_ACCESS_EXPIRY}
       JWT_REFRESH_EXPIRY: ${JWT_REFRESH_EXPIRY}
       NODE_ENV: production
+      CORS_ORIGIN: ${CORS_ORIGIN}
       TURN_SECRET: ${TURN_SECRET}
       TURN_REALM: ${TURN_REALM}
       TURN_HOST: ${TURN_HOST:-localhost}
@@ -31,7 +32,7 @@ services:
         condition: service_healthy
         restart: true
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT:-3000}:3000"
     volumes:
       - ./data/avatars:/app/data/avatars
     healthcheck:
@@ -49,7 +50,7 @@ services:
       backend:
         condition: service_healthy
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT:-80}:80"
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:80"]
       interval: 30s
@@ -63,16 +64,15 @@ services:
       - --use-auth-secret
       - --static-auth-secret=${TURN_SECRET}
       - --realm=${TURN_REALM}
-      - --listening-port=3478
+      - --listening-port=${TURN_PORT:-3478}
       - --min-port=49152
       - --max-port=49200
       - --log-file=stdout
     ports:
-      - "3478:3478/udp"
-      - "3478:3478/tcp"
-      - "5349:5349/udp"
-      - "5349:5349/tcp"
-      - "49152-49200:49152-49200/udp"
+      - "${TURN_PORT:-3478}:${TURN_PORT:-3478}/udp"
+      - "${TURN_PORT:-3478}:${TURN_PORT:-3478}/tcp"
+      - "${TURN_TLS_PORT:-5349}:${TURN_TLS_PORT:-5349}/udp"
+      - "${TURN_TLS_PORT:-5349}:${TURN_TLS_PORT:-5349}/tcp"
     healthcheck:
       test: ["CMD-SHELL", "nc -z localhost 3478 || exit 1"]
       interval: 10s
