--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ TURN_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL_RAND_HEX_32
 TURN_REALM=localhost
 # TURN_HOST should be your public IP or domain in production
 TURN_HOST=localhost
+
+
+#asdfasdf
