--- a/.env.example
+++ b/.env.example
@@ -17,12 +17,13 @@ VITE_API_URL=/api
 
 # CORS Configuration
 # Comma-separated allowlist of origins in production
+# Required when NODE_ENV=production (backend will fail fast if empty)
 CORS_ORIGIN=http://localhost,http://127.0.0.1
 
 # TURN Server Configuration
 # Used for NAT traversal in WebRTC voice/video calls
 # Generate secret with: openssl rand -hex 32
-TURN_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL_RAND_HEX_32
+TURN_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL_RAND_HEX_32_MIN_64_HEX_CHARS
 # TURN_REALM should match your domain in production (e.g., example.com)
 TURN_REALM=localhost
 # TURN_HOST should be your public IP or domain in production
